Fixed account-feature label styling caused by the rename from 'AccontFeature' to 'FeatureHighlight' (the styling still targeted the .account-feature class instead of the new .feature-highlight class); Deleted extra line-break in MainWrapper css; Replaced MainWrapper row-wrapper with RowWrapper component;

--- a/NewTube/NewTube.Client/Components/Atoms/FeatureHighlight.razor.css
+++ b/NewTube/NewTube.Client/Components/Atoms/FeatureHighlight.razor.css
@@ -1,14 +1,13 @@
-﻿.account-feature {
+﻿.feature-highlight {
     display: flex;
     flex-direction: row;
     margin: 0.5em 0;
 }
 
-.account-feature label {
+label {
     width: 6.5em;
     font-weight: bold;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
